atg/torch_wrapper_gen.odin

	atg__fused_moving_avg_obs_fq_helper :: proc(out: ^Tensor, self: Tensor, observer_on: Tensor, fake_quant_on: Tensor, running_min: Tensor, running_max: Tensor, scale: Tensor, zero_point: Tensor, averaging_const: f64, quant_min: i64, quant_max: i64, ch_axis: i64, per_row_fake_quant: c.int, symmetric_quant: c.int) ---
	atg__fused_moving_avg_obs_fq_helper_functional :: proc(out: ^Tensor, self: Tensor, observer_on: Tensor, fake_quant_on: Tensor, running_min: Tensor, running_max: Tensor, scale: Tensor, zero_point: Tensor, averaging_const: f64, quant_min: i64, quant_max: i64, ch_axis: i64, per_row_fake_quant: c.int, symmetric_quant: c.int) ---
	atg__fused_moving_avg_obs_fq_helper_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, self: Tensor, observer_on: Tensor, fake_quant_on: Tensor, running_min: Tensor, running_max: Tensor, scale: Tensor, zero_point: Tensor, averaging_const: f64, quant_min: i64, quant_max: i64, ch_axis: i64, per_row_fake_quant: c.int, symmetric_quant: c.int) ---
	atg__fused_rms_norm :: proc(out: ^Tensor, input: Tensor, normalized_shape_data: [^]i64, normalized_shape_len: c.int, weight: Tensor, eps_v: f64, eps_null: rawptr) ---
	atg__fw_primal :: proc(out: ^Tensor, self: Tensor, level: i64) ---
	atg__fw_primal_copy :: proc(out: ^Tensor, self: Tensor, level: i64) ---
	atg__fw_primal_copy_out :: proc(out: ^Tensor, self: Tensor, level: i64) ---
	atg__gather_sparse_backward :: proc(out: ^Tensor, self: Tensor, dim: i64, index: Tensor, grad: Tensor) ---
	atg__grid_sampler_2d_cpu_fallback :: proc(out: ^Tensor, input: Tensor, grid: Tensor, interpolation_mode: i64, padding_mode: i64, align_corners: c.int) ---
	atg__grid_sampler_2d_cpu_fallback_backward :: proc(out: ^Tensor, grad_output: Tensor, input: Tensor, grid: Tensor, interpolation_mode: i64, padding_mode: i64, align_corners: c.int) ---
	atg__grid_sampler_2d_cpu_fallback_out :: proc(out: ^Tensor, input: Tensor, grid: Tensor, interpolation_mode: i64, padding_mode: i64, align_corners: c.int) ---
	atg__grouped_mm :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, offs: Tensor, bias: Tensor, out_dtype: c.int) ---
	atg__histogramdd_bin_edges_out :: proc(out_data: ^Tensor, out_len: c.int, self: Tensor, bins_data: [^]i64, bins_len: c.int, range_data: [^]f64, range_len: c.int, weight: Tensor, density: c.int) ---
	atg__histogramdd_from_bin_cts :: proc(out: ^Tensor, self: Tensor, bins_data: [^]i64, bins_len: c.int, range_data: [^]f64, range_len: c.int, weight: Tensor, density: c.int) ---
	atg__histogramdd_from_bin_cts_out :: proc(out: ^Tensor, self: Tensor, bins_data: [^]i64, bins_len: c.int, range_data: [^]f64, range_len: c.int, weight: Tensor, density: c.int) ---
	atg__histogramdd_from_bin_tensors :: proc(out: ^Tensor, self: Tensor, bins_data: ^Tensor, bins_len: c.int, weight: Tensor, density: c.int) ---
	atg__histogramdd_from_bin_tensors_out :: proc(out: ^Tensor, self: Tensor, bins_data: ^Tensor, bins_len: c.int, weight: Tensor, density: c.int) ---
	atg__index_put_impl :: proc(out: ^Tensor, self: Tensor, indices_data: ^Tensor, indices_len: c.int, values: Tensor, accumulate: c.int, unsafe: c.int) ---
	atg__index_put_impl_ :: proc(out: ^Tensor, self: Tensor, indices_data: ^Tensor, indices_len: c.int, values: Tensor, accumulate: c.int, unsafe: c.int) ---
	atg__index_put_impl_out :: proc(out: ^Tensor, self: Tensor, indices_data: ^Tensor, indices_len: c.int, values: Tensor, accumulate: c.int, unsafe: c.int) ---
	atg__indices :: proc(out: ^Tensor, self: Tensor) ---
	atg__indices_copy :: proc(out: ^Tensor, self: Tensor) ---
	atg__indices_copy_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__int_mm :: proc(out: ^Tensor, self: Tensor, mat2: Tensor) ---
	atg__int_mm_out :: proc(out: ^Tensor, self: Tensor, mat2: Tensor) ---
	atg__is_all_true :: proc(out: ^Tensor, self: Tensor) ---
	atg__is_any_true :: proc(out: ^Tensor, self: Tensor) ---
	atg__lazy_clone :: proc(out: ^Tensor, self: Tensor) ---
	atg__linalg_check_errors :: proc(info: Tensor, api_name_ptr: cstring, api_name_len: c.int, is_matrix: c.int) ---
	atg__linalg_det :: proc(out: ^Tensor, A: Tensor) ---
	atg__linalg_det_result :: proc(out: ^Tensor, result: Tensor, LU: Tensor, pivots: Tensor, A: Tensor) ---
	atg__linalg_eigh :: proc(out: ^Tensor, A: Tensor, UPLO_ptr: cstring, UPLO_len: c.int, compute_v: c.int) ---
	atg__linalg_eigh_eigenvalues :: proc(out: ^Tensor, eigenvalues: Tensor, eigenvectors: Tensor, A: Tensor, UPLO_ptr: cstring, UPLO_len: c.int, compute_v: c.int) ---
	atg__linalg_eigvals :: proc(out: ^Tensor, self: Tensor) ---
	atg__linalg_slogdet :: proc(out: ^Tensor, A: Tensor) ---
	atg__linalg_slogdet_sign :: proc(out: ^Tensor, sign: Tensor, logabsdet: Tensor, LU: Tensor, pivots: Tensor, A: Tensor) ---
	atg__linalg_solve_ex :: proc(out: ^Tensor, A: Tensor, B: Tensor, left: c.int, check_errors: c.int) ---
	atg__linalg_solve_ex_result :: proc(out: ^Tensor, result: Tensor, LU: Tensor, pivots: Tensor, info: Tensor, A: Tensor, B: Tensor, left: c.int, check_errors: c.int) ---
	atg__linalg_svd :: proc(out: ^Tensor, A: Tensor, full_matrices: c.int, compute_uv: c.int, driver_ptr: cstring, driver_len: c.int) ---
	atg__linalg_svd_u :: proc(out: ^Tensor, U: Tensor, S: Tensor, Vh: Tensor, A: Tensor, full_matrices: c.int, compute_uv: c.int, driver_ptr: cstring, driver_len: c.int) ---
	atg__log_softmax :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__log_softmax_backward_data :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, dim: i64, input_dtype: c.int) ---
	atg__log_softmax_backward_data_out :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, dim: i64, input_dtype: c.int) ---
	atg__log_softmax_out :: proc(out: ^Tensor, self: Tensor, dim: i64, half_to_float: c.int) ---
	atg__logcumsumexp :: proc(out: ^Tensor, self: Tensor, dim: i64) ---
	atg__logcumsumexp_out :: proc(out: ^Tensor, self: Tensor, dim: i64) ---
	atg__lstm_mps :: proc(out: ^Tensor, input: Tensor, hx_data: ^Tensor, hx_len: c.int, params_data: ^Tensor, params_len: c.int, has_biases: c.int, num_layers: i64, dropout: f64, train: c.int, bidirectional: c.int, batch_first: c.int) ---
	atg__lstm_mps_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, out3: Tensor, out4: Tensor, out5: Tensor, input: Tensor, hx_data: ^Tensor, hx_len: c.int, params_data: ^Tensor, params_len: c.int, has_biases: c.int, num_layers: i64, dropout: f64, train: c.int, bidirectional: c.int, batch_first: c.int) ---
	atg__lu_with_info :: proc(out: ^Tensor, self: Tensor, pivot: c.int, check_errors: c.int) ---
	atg__make_dep_token :: proc(out: ^Tensor, options_kind: c.int, options_device: c.int) ---
	atg__make_dual :: proc(out: ^Tensor, primal: Tensor, tangent: Tensor, level: i64) ---
	atg__make_dual_copy :: proc(out: ^Tensor, primal: Tensor, tangent: Tensor, level: i64) ---
	atg__make_dual_copy_out :: proc(out: ^Tensor, primal: Tensor, tangent: Tensor, level: i64) ---
	atg__make_per_channel_quantized_tensor :: proc(out: ^Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, axis: i64) ---
	atg__make_per_channel_quantized_tensor_out :: proc(out: ^Tensor, self: Tensor, scale: Tensor, zero_point: Tensor, axis: i64) ---
	atg__make_per_tensor_quantized_tensor :: proc(out: ^Tensor, self: Tensor, scale: f64, zero_point: i64) ---
	atg__make_per_tensor_quantized_tensor_out :: proc(out: ^Tensor, self: Tensor, scale: f64, zero_point: i64) ---
	atg__masked_scale :: proc(out: ^Tensor, self: Tensor, mask: Tensor, scale: f64) ---
	atg__masked_scale_out :: proc(out: ^Tensor, self: Tensor, mask: Tensor, scale: f64) ---
	atg__masked_softmax :: proc(out: ^Tensor, self: Tensor, mask: Tensor, dim_v: i64, dim_null: rawptr, mask_type_v: i64, mask_type_null: rawptr) ---
	atg__masked_softmax_backward :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, mask: Tensor, dim_v: i64, dim_null: rawptr) ---
	atg__masked_softmax_backward_out :: proc(out: ^Tensor, grad_output: Tensor, output: Tensor, mask: Tensor, dim_v: i64, dim_null: rawptr) ---
	atg__masked_softmax_out :: proc(out: ^Tensor, self: Tensor, mask: Tensor, dim_v: i64, dim_null: rawptr, mask_type_v: i64, mask_type_null: rawptr) ---
	atg__mixed_dtypes_linear :: proc(out: ^Tensor, input: Tensor, weight: Tensor, scale: Tensor, bias: Tensor, activation_ptr: cstring, activation_len: c.int) ---
	atg__mkldnn_reshape :: proc(out: ^Tensor, self: Tensor, shape_data: [^]i64, shape_len: c.int) ---
	atg__mkldnn_reshape_out :: proc(out: ^Tensor, self: Tensor, shape_data: [^]i64, shape_len: c.int) ---
	atg__mkldnn_transpose :: proc(out: ^Tensor, self: Tensor, dim0: i64, dim1: i64) ---
	atg__mkldnn_transpose_ :: proc(out: ^Tensor, self: Tensor, dim0: i64, dim1: i64) ---
	atg__mkldnn_transpose_out :: proc(out: ^Tensor, self: Tensor, dim0: i64, dim1: i64) ---
	atg__mps_convolution :: proc(out: ^Tensor, self: Tensor, weight: Tensor, bias: Tensor, padding_data: [^]i64, padding_len: c.int, stride_data: [^]i64, stride_len: c.int, dilation_data: [^]i64, dilation_len: c.int, groups: i64) ---
	atg__mps_convolution_out :: proc(out: ^Tensor, self: Tensor, weight: Tensor, bias: Tensor, padding_data: [^]i64, padding_len: c.int, stride_data: [^]i64, stride_len: c.int, dilation_data: [^]i64, dilation_len: c.int, groups: i64) ---
	atg__mps_convolution_transpose :: proc(out: ^Tensor, self: Tensor, weight: Tensor, padding_data: [^]i64, padding_len: c.int, output_padding_data: [^]i64, output_padding_len: c.int, stride_data: [^]i64, stride_len: c.int, dilation_data: [^]i64, dilation_len: c.int, groups: i64) ---
	atg__mps_convolution_transpose_out :: proc(out: ^Tensor, self: Tensor, weight: Tensor, padding_data: [^]i64, padding_len: c.int, output_padding_data: [^]i64, output_padding_len: c.int, stride_data: [^]i64, stride_len: c.int, dilation_data: [^]i64, dilation_len: c.int, groups: i64) ---
	atg__native_batch_norm_legit :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, training: c.int, momentum: f64, eps: f64) ---
	atg__native_batch_norm_legit_functional :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, training: c.int, momentum: f64, eps: f64) ---
	atg__native_batch_norm_legit_no_stats :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, training: c.int, momentum: f64, eps: f64) ---
	atg__native_batch_norm_legit_no_stats_out :: proc(out: ^Tensor, save_mean: Tensor, save_invstd: Tensor, input: Tensor, weight: Tensor, bias: Tensor, training: c.int, momentum: f64, eps: f64) ---
	atg__native_batch_norm_legit_no_training :: proc(out: ^Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64) ---
	atg__native_batch_norm_legit_no_training_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, momentum: f64, eps: f64) ---
	atg__native_batch_norm_legit_out :: proc(out: ^Tensor, save_mean: Tensor, save_invstd: Tensor, input: Tensor, weight: Tensor, bias: Tensor, running_mean: Tensor, running_var: Tensor, training: c.int, momentum: f64, eps: f64) ---
	atg__native_multi_head_attention :: proc(out: ^Tensor, query: Tensor, key: Tensor, value: Tensor, embed_dim: i64, num_head: i64, qkv_weight: Tensor, qkv_bias: Tensor, proj_weight: Tensor, proj_bias: Tensor, mask: Tensor, need_weights: c.int, average_attn_weights: c.int, mask_type_v: i64, mask_type_null: rawptr) ---
	atg__native_multi_head_attention_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, query: Tensor, key: Tensor, value: Tensor, embed_dim: i64, num_head: i64, qkv_weight: Tensor, qkv_bias: Tensor, proj_weight: Tensor, proj_bias: Tensor, mask: Tensor, need_weights: c.int, average_attn_weights: c.int, mask_type_v: i64, mask_type_null: rawptr) ---
	atg__neg_view :: proc(out: ^Tensor, self: Tensor) ---
	atg__neg_view_copy :: proc(out: ^Tensor, self: Tensor) ---
	atg__neg_view_copy_out :: proc(out: ^Tensor, self: Tensor) ---
